2013-12-09  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/59415
	* vtable-verify.c (verify_bb_vtables): Check the return value
	of gimple_call_fn.  Use is_gimple_call instead of gimple_code.

2013-12-09  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.md (generic_sched): Add cortexa12.
	(generic_vfp): Likewise.
	* config/arm/arm.c (cortexa12_extra_costs): New cost table.
	(arm_cortex_a12_tune): New tuning struct.
	* config/arm/arm-cores.def: Add cortex-a12.
	* config/arm/arm-tables.opt: Regenerate.
	* config/arm/arm-tune.md: Likewise.
	* config/arm/bpabi.h: Add cortex-a12.
	* doc/invoke.texi: Document -mcpu=cortex-a12.

2013-12-09  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* doc/install.texi (Prerequisites): Explicitly mention C library
	and its headers for multilib builds.

2013-12-08  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/52898
	PR target/51697
	* common/config/sh/sh-common.c (sh_option_optimization_table): Remove
	OPT_mcbranchdi entry.
	* config/sh/sh.opt (mcbranchdi, mcmpeqdi): Mark as undocumented and
	emit a warning.
	* config/sh/sh.c (sh_option_override): Initialize TARGET_CBRANCHDI4
	and TARGET_CMPEQDI_T variables.
	* doc/invoke.texi (SH options): Undocument -mcbranchdi and -mcmpeqdi.

2013-12-07  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* config/linux.h: Fix typo in a comment.

2013-12-07  Maxim Kuvyrkov  <maxim@kugelworks.com>

	* config.gcc (*linux*): Split libc selection from Android support.
	Add libc selection to all *linux* targets.  Add Android support to
	architectures that support it.
	(arm*-*-linux-*, i[34567]86-*-linux*, x86_64-*-linux*,)
	(mips*-*-linux*): Add Android support.

2013-12-07  Alexander Ivchenko  <alexander.ivchenko@intel.com>
	    Maxim Kuvyrkov  <maxim@kugelworks.com>

	* config/bfin/uclinux.h, config/c6x/uclinux-elf.h,
	* config/lm32/uclinux-elf.h, config/m68k/uclinux.h,
	* config/moxie/uclinux.h (TARGET_LIBC_HAS_FUNCTION): Move definitions
	to linux.h.